# EEG-Conformer

./: conformer.py  pyproject.toml  test.ipynb
