[tool.poetry]
name = "eeg_confomer"
version = "0.1.0"
description = "eeg confomer"
readme = "README.md"
authors = ["xialugui <xialugui@139.com>"]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
torchvision = "^0.20.1"
torchsummary = "^1.5.1"
matplotlib = "^3.9.4"
scikit-learn = "^1.6.0"
einops = "^0.8.0"
mne = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.pylint.design]
max-line-length = 120

[[tool.poetry.source]]
name = "ali"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"
